@@ -1,3 +1,10 @@
+2009-12-19  Onkar Shinde  <onkarshinde@gmail.com>
+
+	* src/gui-app.c, src/gui-keypad.c, src/gui-list-message.c,
+	src/interface.c: Swap horizontal and vertical panes for better
+	arrangement of widgets. Provides more vertical and slightly more
+	horizontal area to the editor.
+
 2008-12-21  Onkar Shinde  <onkarshinde@gmail.com>
 
 	* AUTHORS: Add Krishna Bharadwaj to list of patch contributors.
